welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    color = true 	
          ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if(getCouleurSol==Color.green){
    ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
if (!estFaceMur()){
^